# Super-Giga-Projekt

Cube-Ikeda/: .gitignore  README.md  help.cpp  main.cpp  makefile  periodicOrbit.cpp  plot_traj.py  run.sh  visual.cpp
Cube-Ikeda/computations/: integrateFuncs.cpp  integrateFuncs.h  newton.cpp  newton.h  toOdeFuncs.cpp  toOdeFuncs.h
Mackey-Glass/: .gitignore  README.md  main.cpp
Mackey-Glass/common/: CMakeLists.txt  draw.cpp  draw.hpp  mackeyGlass.hpp
Mackey-Glass/simulations/: CMakeLists.txt  bifurcation.cpp  coveringRelation.cpp  intervalCoveringRelation.cpp  newton.cpp  trajectory.cpp
